Correções no script.js

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </p>
         </div>
         <div class="botao">   
-           <input type="button" value="Calcular" onclick="calcular()">
+           <input id="botao" type="button" value="Calcular" onclick="calcular()">
         </div>
     </form>
 </body>
